objects/Centro__Training_Prompt__mdt.object
<CustomObject>
    <fields>
        <fullName>Centro__Answer__c</fullName>
        <label>Answer</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Centro__Question__c</fullName>
        <label>Question</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Centro__Topic_Name__c</fullName>
        <label>Topic Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Grok Training Prompt</label>
    <listViews>
        <fullName>Centro__All_Prompts</fullName>
        <columns>MasterLabel</columns>
        <columns>Centro__Topic_Name__c</columns>
        <columns>Centro__Question__c</columns>
        <columns>Centro__Answer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Prompts</label>
    </listViews>
    <pluralLabel>Grok Training Prompts</pluralLabel>
</CustomObject>